# tdlib

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pyproject.toml  setup.py
src/: .env.example
src/generators/native/: generator.py
src/generators/native/templates/: abstract_classes.template  base.template  classes.template  module.template  tdlib_native.cpp.template
src/native/: tdlib.cpp  tdlib_native.cpp
src/tdlib/: tdlib_native.py  test.py
